--- a/desktop.css
+++ b/desktop.css
@@ -67,10 +67,10 @@
   #gallery h2 {
     padding: 80px 0;
     text-indent: 2rem;
+    width: 50%;
   }
 
   #gallery h2 {
-    padding-bottom: 10px;
   }
 
   /*
