--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -74,8 +74,8 @@
   .actors h2,
   #gallery h2 {
     font-size: 5rem;
-    letter-spacing: 0;
-    padding: 80px 0;
+    letter-spacing: 0.4rem;
+    padding: 60px 0;
   }
 
   
@@ -118,7 +118,7 @@
   */
   .feature {
     padding-bottom: 10%;
-    margin-bottom: 10%; 
+    margin: 20% 0 10%;
   }
   .read-more,
   .source {
