--- a/tablet.css
+++ b/tablet.css
@@ -32,7 +32,7 @@
   }
 
   #hero h2 {
-    padding-bottom: 15px;
+    /*padding-bottom: 15px;*/
     font-size: 1rem;
     letter-spacing: 0.3rem;
     word-spacing: 0.2rem;
