--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -240,16 +240,13 @@
   .footer-mobile-wrapper {
     background-color: blueviolet;
     background-color: rgb(252, 243, 201);
-    /*height: 500px;*/
-    /*height: 80vh;-------*/
     height: 88vh;
     width: 100%;
   }
 
   .mobile-followb-wrapper {
     /*background-color: blanchedalmond;*/
-    /*    display: inline-block;
-    height: 100px;*/
+
     position: relative;
     top: 5vh;
   }
@@ -258,28 +255,12 @@
     /*background-color: aquamarine;*/
     font-weight: bolder;
     margin: 0 auto;
-    padding: 20px;
     text-align: center;
-    /*text-indent: 0.4rem;*/
-    
-    -webkit-touch-callout: none;
-    /* iOS Safari */
-    -webkit-user-select: none;
-    /* Safari */
-    -khtml-user-select: none;
-    /* Konqueror HTML */
-    -moz-user-select: none;
-    /* Old versions of Firefox */
-    -ms-user-select: none;
-    /* Internet Explorer/Edge */
-    user-select: none;
   }
 
   .mobile-social-ul {
     position: relative;
-    /*background-color: red;
-    width: 100%;
-    flex-direction: row;*/
+    justify-content: space-evenly;
   }
 
   .mobile-social-list {
@@ -287,21 +268,12 @@
     list-style: none;
     width: 150px;
     text-align: center;
-    /*
-    position: absolute;
-    flex-basis: 20%;*/
   }
 
   .mobile-a-text {
-    /*     background-color: aqua;
-   width: 80px;
-    height: 80px;*/
+    /*     background-color: aqua;*/
   }
 
-  .mobile-social-logo {
-    width: 65px;
-    height: 65px;
-  }
 
   .mobile-copyright {
     display: flex;
@@ -324,9 +296,4 @@
     font-size: 1.4rem;
   }
 
-  .mobile-a-copyright p {
-    /*background-color: cornflowerblue;*/
-    /*    display: inline;
-    height: 100%;*/
-  }
 }
