--- a/mobile.css
+++ b/mobile.css
@@ -96,6 +96,17 @@
     height: 12vh;
     margin-top: -12vh;
   }*/
+  
+/*  #movies::before,
+  #actors::before,
+  #gallery::before,
+  #contact::before {
+    content: '';
+    display: block;
+    visibility: hidden;
+    height: 8vh;
+    margin-top: -8vh;
+  }*/
 
   /*
   ██     ██ ██████   █████  ██████  ██████  ███████ ██████  ███████
@@ -112,7 +123,7 @@
 
   .wrappers {
     border: 12px solid whitesmoke;
-    height: 400px;
+    height: 500px;
     width: 100%;
   }
 
@@ -162,13 +173,18 @@
 ██      ██    ██ ██    ██    ██    ██      ██   ██
 ██       ██████   ██████     ██    ███████ ██   ██
 */
+  .footer-mobile-wrapper {
+    height: 88vh;
+  }
+  
   .mobile-followb-wrapper {}
 
   .follow-b {
-    border: 3px solid;
-    font-size: 3rem;
+    font-size: 2.4rem;
     padding: 10px;
-    width: 70%;
+    
+    letter-spacing: 0.6rem;
+    text-indent: 0.6rem;
   }
 
   .mobile-social-ul {
