--- a/style.css
+++ b/style.css
@@ -68,14 +68,16 @@ nav {
 
 nav ul {
   /*background-color: aqua;*/
-  width: 50vw;
-  margin: 0 auto;
+  /*width: 50vw;*/
+  /*margin: 0 auto;*/
   display: flex;
   justify-content: center;
   text-align: center;
 }
 
 nav ul li {
+  /*background-color: red;*/
+  /*width: 150px;*/
   display: inline-block;
   /*puts them on same ROW, instead column */
   line-height: 8vh;
@@ -86,6 +88,7 @@ nav ul li {
 }
 
 nav ul li a {
+  /*background-color: yellow;*/
   /*color: rgb(237, 245, 252);*/
   color: whitesmoke;
   display: block;
@@ -98,6 +101,8 @@ nav ul li a {
   /*text-align: center;*/
   min-width: 7vw;
 }
+
+
 
 /*
 ██   ██ ███████ ██████   ██████
@@ -522,4 +527,8 @@ h3 {
 .mobile-gallery,
 .gallery-boxes {
   background-color: rgb(38, 38, 38);
+}
+
+abbr {
+  text-decoration: none;
 }
