--- a/desktop.css
+++ b/desktop.css
@@ -24,16 +24,15 @@
     color: rgb(253, 227, 17);
   }
 
-
   nav ul li a:focus {
     background-color: rgb(253, 227, 17);
     color: rgb(38, 38, 38);
   }
-
   nav ul li a:active {
     background-color: inherit;
-    border: none;
+    color: rgb(253, 227, 17);
   }
+
   
   
   nav .contact {
@@ -49,6 +48,9 @@
   }
 
   #hero-text {
+    border: 7px rgb(253, 227, 17);
+    border-style: double;
+    
     /*bottom: 10%;*/
     /*    width: 100%;
     height: 100%;
