--- a/mobile.css
+++ b/mobile.css
@@ -37,19 +37,20 @@
     /*background-color: rgba(93, 145, 214, 0.5);
     background-color: rgba(114, 169, 226, 0.3);
     background-color: rgba(123, 157, 201, 0.5);
-    bottom: 40%;
-    height: 150px;*/
-    top: 35%;
-    height: 130px;
-    /*max-width: 70%;*/
-    padding: 0 10px 10px;
+    */
+    border: 2px solid yellow;
+    border-radius: 14px;
+    padding: 0 10px 8px;
     position: relative;
+    text-shadow: 4px 4px 2px black;
+    top: 35%;
   }
 
   #hero h1 {
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     font-size: 3.2rem;
     letter-spacing: 0.6rem;
+    text-indent: 0.5rem;
   }
 
   #hero h2 {
