--- a/desktop.css
+++ b/desktop.css
@@ -50,7 +50,6 @@
   #hero-text {
     border: 7px rgb(253, 227, 17);
     border-style: double;
-    
     /*bottom: 10%;*/
     /*    width: 100%;
     height: 100%;
@@ -65,18 +64,25 @@
     /*bottom: 200px;*/
   }
 
+  
   #hero h1 {
-    font-size: 7rem;
+    font-size: 6rem;
     font-weight: bold;
+    height: 65%;
     letter-spacing: 1rem;
-    padding: 7px 10px 0 20px;
+    text-indent: 1rem;
+    padding: 12px;
+    /*padding: 7px 10px 0 20px;*/
   }
 
   #hero h2 {
-    font-size: 2rem;
-    font-weight: 300;
+    font-size: 1.6rem;
+    font-weight: 400;
+    height: 35%;
     letter-spacing: 0.6rem;
-    word-spacing: 0.4rem;
+    padding-top: 10px;
+    text-indent: 0.6rem;
+    word-spacing: 0.2rem;
   }
 
   .movies h2,
