--- a/mobile.css
+++ b/mobile.css
@@ -40,22 +40,38 @@
     */
     border: 2px solid yellow;
     border-radius: 14px;
-    padding: 0 10px 8px;
+    /*padding: 0 10px 8px;*/
     position: relative;
     text-shadow: 4px 4px 2px black;
     top: 35%;
+    min-width: 80%;
+    height: 20%;
+  }
+
+  #hero h1,
+  #hero h2 {
+    display: flex;
+    text-align: center;
+    justify-content: space-evenly;
+    flex-direction: column;
   }
 
   #hero h1 {
-    padding-bottom: 20px;
     font-size: 3.2rem;
-    letter-spacing: 0.6rem;
-    text-indent: 0.5rem;
+    height: 60%;
+    letter-spacing: 0.5rem;
+    padding-top: 20px;
+    text-indent: 0.4rem;
+    width: 100%;
   }
 
   #hero h2 {
     font-weight: 400;
     font-size: 1rem;
+    height: 40%;
+    letter-spacing: 0.3rem;
+    padding-bottom: 20px;
+    width: 100%;
     word-spacing: 0.2rem;
   }
 
@@ -69,7 +85,7 @@
     font-size: 2rem;
     /*margin: 20px 0;*/
   }
-  
+
   p {
     font-size: 1.2rem;
     /*padding: 10px 120px;*/
@@ -91,14 +107,13 @@
     margin-top: -80px;
     visibility: hidden;
   }*/
-/*  #movies::before,
+  /*  #movies::before,
   #actors::before,
   #gallery::before {
     height: 12vh;
     margin-top: -12vh;
   }*/
-  
-/*  #movies::before,
+  /*  #movies::before,
   #actors::before,
   #gallery::before,
   #contact::before {
@@ -108,7 +123,6 @@
     height: 8vh;
     margin-top: -8vh;
   }*/
-
   /*
   ██     ██ ██████   █████  ██████  ██████  ███████ ██████  ███████
   ██     ██ ██   ██ ██   ██ ██   ██ ██   ██ ██      ██   ██ ██
@@ -132,7 +146,7 @@
     border-radius: 22px;
     height: 200px;
     padding: 0 40px;
-   /*    
+    /*    
     width: 300px;
     */
   }
@@ -151,10 +165,11 @@
   .mobile-box {
     /*margin-bottom: 40px;*/
   }
-  
+
   .mobile-box-wrapper {
     padding: 20px;
   }
+
   .mobile-box-wrapper:nth-child(4) {
     margin-bottom: 100px;
   }
@@ -177,13 +192,12 @@
   .footer-mobile-wrapper {
     height: 88vh;
   }
-  
+
   .mobile-followb-wrapper {}
 
   .follow-b {
     font-size: 2.4rem;
     padding: 10px;
-    
     letter-spacing: 0.6rem;
     text-indent: 0.6rem;
   }
