--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -104,12 +104,12 @@
     background-attachment: scroll;*/
   }
 
-  #hero-text {
+/*  #hero-text {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-  }
+  }*/
 
   #hero h1 {}
 
